Added AJAX for weather

--- a/index.html
+++ b/index.html
@@ -1,17 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+</head>
+
+<body>
   <header>
-    <nav class="navbar navbar-light bg-light text-right">
-      <h1>Weahter Dashboard</h1>
+    <nav class="navbar navbar-light bg-primary">
+      <h1 class="text-light">Weather Dashboard</h1>
     </nav>
   </header>
-    
+  <section class="container-fluid">
+    <div class="row">
+
+      <div class="col-sm-4">
+        <br>
+        <h3>Search for a city</h3>
+        <input type="text" id="user-input">
+        <button type="submit" id="submitBtn">Submit</button>
+
+      </div>
+      <div class="col-sm-8">
+        <br>
+        <div class="jumbotron jumbotron-fluid">
+          <div class="container">
+            <h1 class="display-4">Todays Forecast</h1>
+
+            <p class="temp">Temperature: </p>
+            <p class="humidity">Humidity: </p>
+            <p class="windSpeed">Wind Speed: </p>
+            <p class="uvIndex">UV Index: </p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 
 
 
@@ -23,8 +51,13 @@
 
 
 
+  <!-- JavaScript and Jquery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+  <script src="./script.js"></script>
+</body>
 
-    <!-- JavaScript and Jquery -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-  </body>
 </html>
