--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
         <br>
         <h3>Search for a city</h3>
         <input type="text" id="user-input">
-        <button type="submit" id="submitBtn">Submit</button>
+        <button id="submitBtn">Submit</button>
+        <table class="col-3 table row">
+          
+        </table>
 
       </div>
       <div class="col-sm-8">
