Last and final commit

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <input type="text" id="user-input">
         <button id="submitBtn">Submit</button>
         <table class="col-3 table row">
+        <p class="local"></p>
           
         </table>
 
